Thesis.fxml updated
Dodana provjera za istek roka od 90 dana. Ako je razlika između applicationDate i currentDate veća od 90 dana onda kartica pocrveni. Ako je rad Odbranjen onda se ne može više uređivati i postaje zelen

--- a/src/main/resources/app/styles.css
+++ b/src/main/resources/app/styles.css
@@ -450,3 +450,15 @@
 .status-in-progress .status-indicator {
     -fx-fill: #fdcb6e;
 }
+.card-overdue {
+    -fx-border-color: red;
+    -fx-border-width: 2;
+    -fx-border-radius: 8;
+    -fx-background-color: rgba(255, 215, 215, 0.3)
+}
+.card-defended{
+    -fx-border-color: green;
+    -fx-border-width: 2;
+    -fx-border-radius: 8;
+    -fx-background-color: rgba(215, 255, 215, 0.3)
+}
